<resources>
    <string name="app_name">Buss Location Tracker</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="ROUTES">
        <item>27_FEBRERO</item>
        <item>CHARLES</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="message_select_route">Debes seleccionar la ruta actual y activar el envió de posición en configuraciones.</string>
    <string name="not_summary_on_position_sender">Se está enviado la posición de este vehículo</string>
    <string name="pref_summary_on_position_sender">Se está enviado la posición de este vehículo, presionar para detener envió</string>
    <string name="pref_summary_off_position_sender">No se está enviado la posición de este vehículo, presionar para iniciar envió</string>
    <string name="message_location_off">No se está enviado la posición de este vehículo</string>
    <string name="running_status">Corriendo ultimo envió #</string>
    <string name="running">Corriendo</string>
    <string name="stop_status">Envió detenido</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="position_sender">Envió de posición</string>

    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_selected_default_rout">Seleccione Ruta</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ok">OK</string>
</resources>
